Fixed tablet nav spacing

--- a/css/main.css
+++ b/css/main.css
@@ -565,7 +565,7 @@ textarea {
   }
 
   header nav {
-    width: 20%;
+    width: 25%;
   }
 
   header nav ul {
